--- a/payment.html
+++ b/payment.html
@@ -43,7 +43,7 @@ padding: 10px;
             <div class="container1">
                 <div class="image">
                     <img src="QRCode_150_value.png" height="200px" alt="QR Code for Golgappa Store" />
-                    <p style="text-align:center; font-weight:bold;">Golgappa Store</p>
+                    <p style="text-align:center; font-weight:bold;">Online Grocery Store</p>
                 </div>
                 <br />
                 <div class="name">
